--- a/dockerhub.docker-compose.yml
+++ b/dockerhub.docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - MINE_NAME=${MINE_NAME:-biotestmine}
       - MINE_REPO_URL=${MINE_REPO_URL:-}
       - IM_DATA_DIR=${IM_DATA_DIR:-DATA_DIR}
-      - MEM_OPTS=${MEM_OPTS:-"-Xmx2g -Xms1g"}
+      - MEM_OPTS=${MEM_OPTS:-"-Xmx500m -Xms256m"}
       - IM_REPO_URL=${IM_REPO_URL:-}
       - IM_REPO_BRANCH=${IM_REPO_BRANCH:-}
     depends_on: 
@@ -35,7 +35,7 @@ services:
     container_name: intermine_solr
     image: intermine/solr
     environment:
-      - MEM_OPTS=${MEM_OPTS:-"-Xmx2g -Xms1g"}
+      - MEM_OPTS=${MEM_OPTS:-"-Xmx500m -Xms256m"}
       - MINE_NAME=${MINE_NAME:-biotestmine}
     user: ${UID:-1000}:${GID:-1000}
     volumes:
@@ -45,7 +45,7 @@ services:
     container_name: intermine_tomcat
     image: intermine/tomcat
     environment:
-      - MEM_OPTS=${MEM_OPTS:-"-Xmx1g -Xms500m"}
+      - MEM_OPTS=${MEM_OPTS:-"-Xmx256m -Xms128m"}
     ports:
       - ${TOMCAT_HOST_PORT:-9999}:${TOMCAT_PORT:-8080}
 
