mem limits change

--- a/postgres/postgresql.conf
+++ b/postgres/postgresql.conf
@@ -61,7 +61,7 @@ listen_addresses = '*'
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
 #port = 5432				# (change requires restart)
-max_connections = 600			# (change requires restart)
+max_connections = 60			# (change requires restart)
 #superuser_reserved_connections = 3	# (change requires restart)
 #unix_socket_directories = '/var/run/postgresql'	# comma-separated list of directories
 					# (change requires restart)
@@ -110,17 +110,17 @@ max_connections = 600			# (change requires restart)
 
 # - Memory -
 
-shared_buffers = 1GB			# min 128kB
+shared_buffers = 100MB			# min 128kB
 					# (change requires restart)
 #huge_pages = try			# on, off, or try
 					# (change requires restart)
-temp_buffers = 800MB			# min 800kB
+temp_buffers = 80MB			# min 800kB
 #max_prepared_transactions = 0		# zero disables the feature
 					# (change requires restart)
 # Caution: it is not advisable to set max_prepared_transactions nonzero unless
 # you actively intend to use prepared transactions.
-work_mem = 1GB				# min 64kB
-maintenance_work_mem = 500MB		# min 1MB
+work_mem = 100MB				# min 64kB
+maintenance_work_mem = 50MB		# min 1MB
 #replacement_sort_tuples = 150000	# limits use of replacement selection sort
 #autovacuum_work_mem = -1		# min 1MB, or -1 to use maintenance_work_mem
 #max_stack_depth = 2MB			# min 100kB
@@ -299,7 +299,7 @@ random_page_cost = 2.5			# same scale as above
 #parallel_tuple_cost = 0.1		# same scale as above
 #parallel_setup_cost = 1000.0	# same scale as above
 #min_parallel_relation_size = 8MB
-effective_cache_size = 1GB
+effective_cache_size = 100MB
 
 # - Genetic Query Optimizer -
 
